add table of attachments and flag to skip it
