# internal/server/impl/handler.go
@@ -12,13 +12,15 @@ import (
 	"github.com/reddec/api-notes/internal/storage"
 )
 
+const indexPage = "index.html"
+
 type Server struct {
 	Storage  storage.Storage
 	Renderer *render.Renderer
 	BaseURL  string
 }
 
-func (srv *Server) CreateNote(ctx context.Context, req api.OptDraftMultipart) (*api.Note, error) {
+func (srv *Server) CreateNote(ctx context.Context, req *api.DraftMultipart) (*api.Note, error) {
 	id := storage.GenID()
 	if err := srv.storeNote(ctx, req, id); err != nil {
 		return nil, err
@@ -29,18 +31,25 @@ func (srv *Server) CreateNote(ctx context.Context, req api.OptDraftMultipart) (*
 	}, nil
 }
 
-func (srv *Server) storeNote(ctx context.Context, req api.OptDraftMultipart, id string) error {
-	html, err := srv.Renderer.Render(req.Value.Title, req.Value.Text)
+func (srv *Server) storeNote(ctx context.Context, req *api.DraftMultipart, id string) error {
+	var attachments []string
+	if !req.HideAttachments.Value {
+		attachments = make([]string, 0, len(req.Attachment))
+		for _, name := range req.Attachment {
+			attachments = append(attachments, name.Name)
+		}
+	}
+	html, err := srv.Renderer.Render(req.Title, req.Text, attachments)
 	if err != nil {
 		return fmt.Errorf("render HTML: %w", err)
 	}
 
-	if err := srv.Storage.Set(ctx, id, bytes.NewReader(html)); err != nil {
+	if err := srv.Storage.Set(ctx, filepath.Join(id, indexPage), bytes.NewReader(html)); err != nil {
 		return fmt.Errorf("store HTML: %w", err)
 	}
 
-	for _, attachment := range req.Value.Attachment {
-		if attachment.Name == "index.html" {
+	for _, attachment := range req.Attachment {
+		if attachment.Name == indexPage {
 			continue
 		}
 		subID := filepath.Join(id, attachment.Name)
@@ -55,6 +64,6 @@ func (srv *Server) DeleteNote(ctx context.Context, params api.DeleteNoteParams) 
 	return srv.Storage.Delete(ctx, params.ID)
 }
 
-func (srv *Server) UpdateNote(ctx context.Context, req api.OptDraftMultipart, params api.UpdateNoteParams) error {
+func (srv *Server) UpdateNote(ctx context.Context, req *api.DraftMultipart, params api.UpdateNoteParams) error {
 	return srv.storeNote(ctx, req, params.ID)
 }
